# wFlow

./: .env  .gitignore  ImplementationPlan.md  PROMPT.md  edge-cases.md  main.py  package-lock.json  pyproject.toml  start_worker.py  test.py
backend/: .gitignore  FLOW.md  main.py  pyproject.toml  start_worker.py
backend/migrations/: env.py
backend/migrations/versions/: 1a9320f696c6_integrations_credentials_combined_into_.py  (+9 more)
backend/src/: __init__.py  app.py  config.py
frontend/: index.html  package-lock.json  package.json  postcss.config.js  prompt.md  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
migrations/: env.py
migrations/versions/: e58967bb3155_initial_auth_and_app_integrations_tables.py
src/: __init__.py  app.py  config.py
src/api/: dependencies.py
src/core/: exceptions.py  security.py
src/db/: models.py  mongo_db.py  redis.py  schemas.py
src/dependencies/: auth.py
src/integrations/: constants.py  exceptions.py  oauth2.py
src/models/: auth_models.py
src/repositories/: __init__.py  app_integrations.py  auth.repository.py  auth_repository.py  node_registry_repository.py  workflows.py
src/routes/: app_integration_routes.py  auth.routes.py  auth_routes.py
src/schemas/: mongo_projections.py  workflow.py
src/services/: app_integration_service.py  encryption.py  tokens.py  user_service.py  workflow_service.py
src/utils/: exceptions.py  file_uploads.py  utils.py
src/workflows/: control_flow_nodes.py  executor.py  nodes.py  parser.py  pipeline_parser.py  planner.py  types.py  utils.py  workflow.py
(+196 files in other folders)
