[project]
name = "wflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beanie>=2.1.0",
    "fastapi[standard]>=0.136.0",
    "google-genai>=1.73.1",
    "groq>=1.1.2",
    "huggingface-hub>=1.11.0",
    "pydantic>=2.13.1",
    "pydantic-settings>=2.13.1",
    "pymongo>=4.16.0",
    "temporalio>=1.26.0",
]
