[project]
name = "wflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "beanie>=2.1.0",
    "fastapi[standard]>=0.136.0",
    "google-auth>=2.16.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "passlib>=1.7.4",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "pymongo>=4.16.0",
    "redis>=7.4.0",
    "requests>=2.33.1",
    "temporalio>=1.26.0",
]
